--- a/cameraVApp/src/main/res/values-pt-rBR/strings.xml
+++ b/cameraVApp/src/main/res/values-pt-rBR/strings.xml
@@ -1,2 +1,199 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources/>
+<?xml version='1.0' encoding='UTF-8'?>
+<resources>
+  <string name="app_name">CâmeraV</string>
+  <string name="photo">Fotografia</string>
+  <string name="video">Vídeo</string>
+  <string name="menu_all_media">Todas as mídias</string>
+  <string name="menu_list">Lista</string>
+  <string name="menu_grid">Grade</string>
+  <string name="menu_location">Localização</string>
+  <string name="menu_date">Data</string>
+  <string name="connected_to_tor">Conectado ao Tor</string>
+  <string name="not_connected_to_tor">Sem conexão ao Tor</string>
+  <string name="you">Você</string>
+  <string name="notifications">Notificações</string>
+  <string name="organizations">Organizações</string>
+  <string name="get_in">Entrar</string>
+  <string name="we_could_not_log">Não foi possível iniciar a sua sessão. Por favor, tente de novo.</string>
+  <string name="change_settings">Alterar Configurações </string>
+  <string name="save">Salvar</string>
+  <string name="cancel"><u>Cancelar</u> </string>
+  <string name="log_out">Finalizar a sessão</string>
+  <string name="no_notifications">Sem notificações.</string>
+  <string name="connect_with_organizations">Conecte-se com uma organização.</string>
+  <string name="delete">Apagar</string>
+  <string name="rename">Renomear</string>
+  <string name="export">Exportar</string>
+  <string name="send">Enviar\u2026</string>
+  <string name="your_gallery_is_hungry">A sua galeria está com fome de fotos e vídeos.</string>
+  <string name="swipe_left_for_cameras">Deslize para a esquerda para ativar as câmeras.</string>
+  <string name="all_media">Todas as mídias</string>
+  <string name="share">Compartilhe</string>
+  <string name="share_secure">Compartilhamento seguro</string>
+  <string name="add_a_quick_note">Adicionar uma anotação \u2026</string>
+  <string name="untitled">Sem Título</string>
+  <string name="x_tags">%1$d Tag %2$s</string>
+  <string name="x_messages">%1$d Mensagem %2$s</string>
+  <string name="x_location">%1$f, %2$f</string>
+  <string name="location_unknown">Localização desconhecida</string>
+  <string name="send_to_org">Enviar para uma organização</string>
+  <string name="share_via">Compartilhar Via</string>
+  <string name="choose_an_organization">Escolha a organização</string>
+  <string name="send_encrypted_to_organization">Compartilhamento criptografado para uma organização\u2026</string>
+  <string name="send_encrypted_to_x">Compartilhamento criptografado para%1$s</string>
+  <string name="sending_encrypted_to_x">Compartilhamento criptografado para %1$s (alterar?)</string>
+  <string name="there_are_no_organizations">Não há organizações para o envio do material.  Em vez disso, tente compartilhar o arquivo de mídia.</string>
+  <string name="sharing_outside_of_informacam">Compartilhar por fora %1$s pode fazer com que a “cadeia de custódia” seja contestada.  Compartilhar mesmo assim?</string>
+  <string name="export_my_credentials">Exportar as minhas credenciais\u2026</string>
+  <string name="send_message">Enviar mensagem\u2026</string>
+  <string name="notes">Anotações</string>
+  <string name="delete_tag">Apagar o Tag</string>
+  <string name="delete_audio_note">Apagar anotação de áudio</string>
+  <string name="unverified">Não Verificada</string>
+  <string name="verified">Verificada</string>
+  <string name="pull_down_to_wipe">Deslize para baixo para apagar todos os seus arquivos.</string>
+  <string name="or">\u2014 ou \u2014</string>
+  <string name="please_wait">Aguarde por favor</string>
+  <string name="record">Gravar</string>
+  <string name="resume">Retomar</string>
+  <string name="redo">Refazer</string>
+  <string name="play">Play</string>
+  <string name="resend_credentials">Reenviar as minhas credenciais\u2026</string>
+  <string name="retry">Repetir</string>
+  <string name="your_media_is_being_encoded">O seu arquivo está sendo processado...</string>
+  <string name="login_open">Abrir</string>
+  <string name="login_passphrase">senha</string>
+  <string name="preferences">Preferências</string>
+  <string name="original_images_should_be">Suas fotografias e vídeos deverão ser salvos em:</string>
+  <string name="prefs_images_deleted">Armazenamento criptografado (mais lento)</string>
+  <string name="prefs_images_saved">Armazenamento padrão (mais rápido)</string>
+  <string name="prefs_lock_screen">Bloquear tela</string>
+  <string name="prefs_lock_screen_on">Ligar</string>
+  <string name="prefs_lock_screen_off">Desligar</string>
+  <string name="prefs_panic">Botão pânico vai acionar:</string>
+  <string name="prefs_panic_wipe_app">Apagar o aplicativo inteiro</string>
+  <string name="prefs_panic_wipe_content">Apagar os meus arquivos</string>
+  <string name="prefs_language_title">Idioma</string>
+  <string name="pref_languages_default">Padrão do sistema</string>
+  <string name="pref_languages_en_us">Inglês (EUA)</string>
+  <string name="pref_languages_fr">Francês</string>
+  <string name="pref_languages_es">Espanhol</string>
+  <string name="pref_languages_ar">Árabe</string>
+  <string name="pref_languages_no">Noruguês</string>
+  <string name="pref_languages_sv">Sueco</string>
+  <string name="pref_languages_pt_PT">Português (Brazil)</string>
+  <string name="pref_languages_si_LK">Cingalês (Ceilão)</string>
+  <string name="pref_languages_tr_TR">Turco (Turquia)</string>
+  <string name="menu_share">Compartilhar</string>
+  <string name="menu_share_media">Compartilhar mídia</string>
+  <string name="menu_share_meta">Compartilhar Metadados</string>
+  <string name="menu_share_meta_j3m">Compartilhar formato JSON J3M</string>
+  <string name="menu_share_meta_csv">Compartilhar formato CSV</string>
+  <string name="menu_edit">Editar</string>
+  <string name="menu_done">Concluído</string>
+  <string name="menu_save">Salvar</string>
+  <string name="menu_view">Visualizar</string>
+  <string name="menu_select">Selecionar</string>
+  <string name="menu_panic">Pânico</string>
+  <string name="menu_settings">Configurações</string>
+  <string name="menu_lock">Bloquear o aplicativo</string>
+  <string name="menu_view_meta">Metadados</string>
+  <string name="menu_view_charts">Gráficos</string>
+  <string name="menu_share_hash">Enviar a prova da existência do arquivo  </string>
+  <string name="menu_creds">Compartilhar Credenciais</string>
+  <string name="menu_export_keys">Fazer um backup das chaves  </string>
+  <string name="menu_home_gallery_select_all">Selecionar Tudo</string>
+  <string name="menu_remote_access">Compartilhamento remoto</string>
+  <string name="menu_remote_access_tor">Compartilhamento pela web</string>
+  <string name="menu_remote_access_dropbox">Sincronizar Dropbox</string>
+  <string name="wizard_welcome">Bem-vindo!</string>
+  <string name="wizard_choose_language">Escolha um idioma:</string>
+  <string name="wizard_get_started">Iniciar</string>
+  <string name="wizard_step_1_of_2">Passo 1 de 2:</string>
+  <string name="wizard_create_db">Configure a sua base de dados segura.</string>
+  <string name="wizard_email_optional">Correio eletrônico (opcional)</string>
+  <string name="wizard_password_dont_match">As senhas não coincidem =(</string>
+  <string name="wizard_password_wrong_format">A sua senha precisa ter mais de 10 caracteres</string>
+  <string name="wizard_ok_next">Ok, próximo</string>
+  <string name="wizard_step_2_of_2">Passo 2 de 2:</string>
+  <string name="wizard_take_photo_title">Tire 6 fotografias (de qualquer coisa) para gerar a chave do seu aparelho.</string>
+  <string name="wizard_key_information">O seu código permitirá a sua verificação para que você possa compartilhar de maneira contínua e segura.</string>
+  <string name="wizard_take_photo">Tirar fotos</string>
+  <string name="wizard_take_photo_take">Fotografar</string>
+  <string name="wizard_key_is_being_made">A sua chave está sendo gerada, pode demorar um pouquinho.</string>
+  <string name="wizard_key_made">A sua chave foi criada.</string>
+  <string name="home_audio_note">Anotação de áudio</string>
+  <string name="home_share">COMPARTILHAR</string>
+  <string name="home_gallery_title">Galeria</string>
+  <string name="home_gallery_selected">Selecionados: %1$d </string>
+  <string name="home_gallery_delete">Apagar</string>
+  <string name="home_gallery_empty">A sua galeria está vazia.</string>
+  <string name="home_swipe_for_more">Deslize para mais</string>
+  <string name="editor_tags_form">Acrescentar informações</string>
+  <string name="editor_tags_add">Acrescentar tags</string>
+  <string name="editor_form_edit">Informação sobre as tags</string>
+  <string name="editor_write_text">Digite o Texto</string>
+  <string name="editor_save_text">Salvar o texto</string>
+  <string name="editor_history">Histórico</string>
+  <string name="editor_image_taken">Fotografado %1$s</string>
+  <string name="editor_history_shared">Compartilhado</string>
+  <string name="editor_history_exported">Compartilhado com segurança</string>
+  <string name="audio_saved_saved">Gravação salva</string>
+  <string name="audio_saved_info">As anotações de áudio são só para sua referência - elas não serão compartilhadas.</string>
+  <string name="audio_saved_ok">OBRIGADO!</string>
+  <string name="shared_never">Nunca compartilhado.</string>
+  <string name="shared_recently">Compartilhado menos de um minuto atrás.</string>
+  <string name="shared_minutes">Compartilhado a %1$d minutos.</string>
+  <string name="shared_minute">Compartilhado a %1$d minuto.</string>
+  <string name="shared_hours">Compartilhado a %1$d horas.</string>
+  <string name="shared_hour">Compartilhado a %1$d hora.</string>
+  <string name="shared_days">Compartilhado a %1$d dias.</string>
+  <string name="shared_day">Compartilhado a %1$d dia.</string>
+  <string name="filter_all">Todos os Itens</string>
+  <string name="filter_photos">Só as fotografias</string>
+  <string name="filter_videos">Só os vídeos</string>
+  <string name="filter_encrypted">Só o material criptografado</string>
+  <string name="filter_external">Apenas externo</string>
+  <string name="filter_tagged">Itens tageados</string>
+  <string name="filter_shared">Itens compartilhados</string>
+  <string name="panic_settings">Configurações de pânico</string>
+  <string name="panic_cancel">Cancelar</string>
+  <string name="panic_hint">Deslize para baixo para apagar o aplicativo</string>
+  <string name="panic_hint_wipe_content">Deslize para baixo para apagar os dados pessoais</string>
+  <string name="panic_test_successful">Boa! Num cenário real, você teria apagado tudo com sucesso.</string>
+  <string name="prefs_gps_highres">Forçar o GPS em alta resolução</string>
+  <string name="prefs_gps_highres_summary">Assegurar que você só obtenha dados sobre a localização com a rede real de satélites do GPS.</string>
+  <string name="prefs_external_camera">Usar apps externos para a função câmera</string>
+  <string name="prefs_external_camera_summary">Usar apenas apps de câmeras sem criptografia, e não a câmera embutida criptografada</string>
+  <string name="menu_alwayson">Modo prova</string>
+  <string name="_camerav_notarization_id_">#CameraV - Prova da existência do arquivo</string>
+  <string name="share_from_">Compartilhe de</string>
+  <string name="_id_">Id.:</string>
+  <string name="prefs_export_local">Exportar multimídia criptografada</string>
+  <string name="prefs_export_local_summary">Quando for compartilhar mídia criptografada, salve primeiro num HD externo</string>
+  <string name="prefs_run_foreground">Manter o app em segundo plano</string>
+  <string name="prefs_run_foreground_summary">Assegurar que o app não feche quando você mudar para outro app</string>
+  <string name="prefs_stealth_icon">Ativar Ícone Alternativo</string>
+  <string name="prefs_stealth_icon_summary">Esconder o nome e o ícone da CameraV, mostrando apenas o ícone genérico “Configurações CV”</string>
+  <string name="prefs_block_screenshots">Bloquear imagens das telas capturadas </string>
+  <string name="prefs_block_screenshots_summary">Impedir que o sistema Android e outros apps tirem imagens das telas deste app</string>
+  <string name="light">Luz</string>
+  <string name="air_pressure">Pressão do Ar</string>
+  <string name="orientation">Orientação</string>
+  <string name="motion">Gesto</string>
+  <string name="camerav_hash_service">Verificar o hash</string>
+  <string name="app_name_alt">Configurações da CV</string>
+  <string name="wifi_networks">Redes wifi</string>
+  <string name="gps_speed">Velocidade do GPS</string>
+  <string name="gps_altitude">Altitude do GPS</string>
+  <string name="remote_web_access_enabled_at">Acesso remoto via web será ativado às</string>
+  <string name="remote_web_access_disabled">Acesso remoto via web desativado</string>
+  <string name="web_sharing">Compartilhamento via web</string>
+  <string name="deactivate_web_share">Desativar compartilhamento via web</string>
+  <string name="activate_web_share">Ativar compartilhamento via web</string>
+  <string name="share_web_address">Compartilhar o endereço da web</string>
+  <string name="you_can_access_my_camerav_photos_and_videos_here_">As minhas fotografias e vídeos da CameraV podem ser acessadas aqui:</string>
+  <string name="gps_accuracy">Precisão do GPS</string>
+  <string name="welcome_to_camerav_would_you_like_to_read_the_user_guide_">Bem-vindo a CameraV. Gostaria de ler o manual de uso?</string>
+  <string name="menu_guide">Ver Guia</string>
+</resources>
