--- a/informaCam/src/main/res/values-eo/strings.xml
+++ b/informaCam/src/main/res/values-eo/strings.xml
@@ -1,4 +1,57 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="app_name">InformaCam</string>
+  <string name="welcome">Bonvenigi!</string>
+  <string name="name">Nomo</string>
+  <string name="password">Pasvorto</string>
+  <string name="password_again">Pasvorto denove</string>
+  <string name="take_a_boring_photo">Okupi 6 enuig fotojn</string>
+  <string name="we_are_generating_your">Ni estas produktanta via kerna. Ĉi tio os okupi du minutoj.</string>
+  <string name="in_the_meantime_adjust"> Dume, ŝanĝi viajn preferojn: </string>
+  <string name="trashed">forĵet</string>
+  <string name="saved"> savita </string>
+  <string name="done"> Farita! </string>
+  <string name="please_wait_while_your">Bonvole atendu dum viaj kernaj finoj produkt.</string>
+  <string name="ok">BONA</string>
+  <string name="clear">Klara</string>
+  <string name="sorry_your_password_doesnt"> Mizera, via pasvorto ne matĉo. </string>
+  <string name="your_password_should_be">Via pasvorto devus esti pli ol 10 karakteroj.</string>
+  <string name="your_device_is_all"> Via aparato estas ĉiuj fiks. </string>
+  <string name="continue_">Daŭri</string>
+  <string name="could_not_find_any_camera_activity">Ne povis trovi iu Fotilo aplikaĵoj instalita sur via telefono.</string>
+  <string name="get_in">Enir</string>
+  <string name="cancel"> Nuligi </string>
+  <string name="permissions_title">InformaCam Permesoj</string>
+  <string name="permissions_description">Permesas la aplikon legi sentilon donitaĵojn de via devices-aj haveblaj sentiloj (accelerometer, lumo metro, kompaso, ktp.), legi vian reton staton, vifion staton, kaj bluetooth stato kie havebla.</string>
+  <string name="key_installed"> Kerna Instalis </string>
+  <string name="send">Sendi \u2026</string>
+  <string name="key_sent">Kerna Sendis</string>
+  <string name="export">Eksport</string>
+  <string name="you_exported_this_x"> Vi eksportis ĉi tiu %1$s. </string>
+  <string name="you_exported_this_x_to_x"> Vi sendis ĉi tiu %1$s al %2$s </string>
+  <string name="image">bildo</string>
+  <string name="video">video</string>
   <!--<string name="gps_not_available_your">GPS is not fully available.  Your data might not be as accurate.</string>-->
+  <string name="email">Retpoŝto</string>
+  <string name="analyzing"> Analiz \u2026 </string>
+  <string name="informacam_could_not_send"> InformaCam ne povis sendi via amaskomunikiloj. </string>
+  <string name="x_of_x_processed"> (%1$d/%2$d amaskomunikiloj prilabor) </string>
+  <string name="heres_whats_changed">Jen kio estas ŝanĝ:</string>
+  <string name="old_version">Malnova Versio</string>
+  <string name="new_version">Malnova Versio</string>
+  <string name="could_not_import_ictd">Ne povis import iu ICTD dosiero. Bonvolu provi denove.</string>
+  <string name="zero">0</string>
+  <string name="please_wait_video_loading">Bonvole atendu. Video ŝarĝ \u2026</string>
+  <string name="upload_in_progress"> Alŝuto ankoraŭ progresanta </string>
+  <string name="network_error_restarting_upload_">Reto eraro. Rekomencanta alŝuto...</string>
+  <string name="successful_upload_to_"> Sukcesa alŝuto al </string>
+  <string name="upload">Alŝuto</string>
+  <string name="recording_video_"> Disko video... </string>
+  <string name="proof_mode_string">PRUVO MANIERO nun estas aktiva. Uz la menuo aŭ sciigo reven al ĉi tiu ekrano \"fino\".</string>
+  <string name="proof_mode_button">FINO KAPTO</string>
+  <string name="cacheword_unlocked">Tuŝ malfermi</string>
+  <string name="remote_share_activated">Izolita Dividanta Aktivigita</string>
+  <string name="backing_up_camerav_gallery_to_dropbox"> Dropbox rezervo komencis... </string>
+  <string name="camerav_syncing_photos_and_videos_">CameraV akordiganta fotoj kaj videoj...</string>
+  <string name="dropbox_backup_complete">Dropbox rezervo kompleta</string>
 </resources>
